Fixed text overflow

--- a/src/styles/tooltip-default.scss
+++ b/src/styles/tooltip-default.scss
@@ -6,10 +6,6 @@
     & .#{$module-name}-tooltip-item {
       &.title {
         border-bottom: 1px solid;
-
-        & span {
-          color: black;
-        }
       }
 
       & span {
